# tagent

./: .gitignore  E2E_TEST_SUMMARY.md  GEMINI.md  HALLUCINATION_FIXES.md  Makefile  PUBLISHING.md  README.md  context_rag.md  pipelines.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tagent_community_workflow.md  test_integration.py  test_loop_prevention.py  test_model_config.py  test_rag.py
ToDo/pipelines/: README.md  technical_specification.md
documentation/: README.md
documentation/agent/: 01_introduction.md  02_getting_started.md  03_using_tools.md  04_configuration.md
documentation/pipelines/: 01_introduction.md  02_getting_started.md  03_core_concepts.md  04_advanced_features.md  05_api_reference.md
examples/: cnpj_enrichment_workflow.yaml  flight_search_agent_example.tape  online_store_agent_example.py  rag_linear_example.py  rag_memory_example.py  simple_research_workflow.yaml  step_config_example.py  task_based_example.py  travel_planning_agent_example.py
examples/conditional_pipeline/: conditional_example.py
examples/inventory_management/: README.md  inventory_management_example.py
examples/just_calling_example/: just_calling_example.py
examples/post_creator/: final_post.md  post_creator.py  text_negative.md  text_neutral.md  text_positive.md
examples/tab_news_analyzer/: tabnew_code_example.py  tabnews_code_example.py  (+1 more)
scripts/: publish.py
src/: __init__.py  cnpj_agent_example.py  enriquecimento_cnpj_exemplo.py  main.py
tests/: README.md  run_e2e_tests.py  test_main.py  test_pipeline_api.py  test_state_machine_integration.py
(+37 files in other folders)
